ui: ake add npm install

--- a/ui/Makefile
+++ b/ui/Makefile
@@ -8,12 +8,14 @@ include make_docker.mk
 dev: dev_clean
 	mkdir -p dist/dev/
 	cp node_modules/sql.js/dist/sql-wasm.* dist/dev/
+	npm install
 	npx parcel watch src/*html --dist-dir dist/dev/ --public-url $(PUBLIC_URL)
 
 .PHONY: prod_clean
 prod: prod_clean
 	mkdir -p dist/prod/
 	cp node_modules/sql.js/dist/sql-wasm.* dist/prod/
+	npm install
 	npx parcel build src/*html --dist-dir dist/prod/ --public-url $(PUBLIC_URL)
 
 .PHONY: $(addsuffix _clean, $(DIST_MODES))
